# Online-Cinema

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 099f1174c024_add_carts_and_cart_items_tables.py  0ea90f6d6c83_add_favorite_movies_table.py  42604da93d91_add_movie_reviews_table.py  52fefb9114a5_fix_cart_foreign_keys.py  87e6858781a4_remove_unique_constraint_from_order_.py  9709139c9b69_add_movie_reviews_and_ratings.py  99bbb110390b_add_cart_and_items.py  9c464d1308eb_add_orders_and_order_items.py  a178e08e5ebb_add_payment_models.py  abeb554b28e1_init_db_with_timezones.py  c79d6f1a7db7_add_cart_models.py  cded7a79e18a_.py  fe3d27d8cb67_add_payment_model.py
src/: main.py  tasks.py
src/api/: auth.py  cart.py  dependencies.py  favorites.py  metadata.py  movies.py  orders.py  payments.py  reviews.py
src/core/: security.py
src/crud/: metadata.py  movie.py
src/db/: database.py
src/models/: __init__.py  cart.py  movie.py  order.py  payment.py  user.py
src/schemas/: cart.py  movie.py  order.py  payment.py  user.py
tests/: conftest.py  test_auth.py
